# fsspec-git-annex

./: .gitignore  pyproject.toml
.github/workflows/: cd.yml  ci.yml  main.yml  publish.yml
.reuse/: dep5
src/fsspec_git_annex/: filesystem.py  git.py  git_annex.py
src/fsspec_git_annex/cli/: git_annex_mount.py
tests/: conftest.py  test_filesystem.py  utils.py
tests/cli/: test_git_annex_mount.py
